# mathematics

math/: pyproject.toml
math/src/math/: __init__.py  geometry.py
