[project]
name = "math"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "behike56", email = "fxy.x@lambda-publishing.com" }
]
requires-python = ">=3.14"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.8",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.4.0",
]

[project.scripts]
math = "math:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
